# gk

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TODO.md  biome.json  package.json  pyproject.toml  tsconfig.json
.claude/skills/gk/: SKILL.md
.claude/skills/sql-patterns/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release-drafter.yml
skills/: extract-knowledge.md  graph-maintenance.md  query-knowledge.md
src/: backend.ts  config.py  config.ts  db.py  dolt.ts  embeddings.py  embeddings.ts  graph.py  graph.ts  id.ts  index.ts  maintenance.ts  models.py  observations.py  observations.ts  schema.sql  scoring.ts  search.py  search.ts  server.py  server.ts  sqlite.ts  types.ts
src/prompts/: __init__.py  extraction.md  extraction_guide.md  pyramid.md  pyramid_extraction.md  query.md  review.md  review_and_refine.md
tests/: backend.test.ts  config.test.ts  conftest.py  dolt.test.ts  embeddings.test.ts  graph.test.ts  helpers.ts  id.test.ts  maintenance.test.ts  observations.test.ts  scoring.test.ts  search.test.ts  server.test.ts  sqlite.test.ts  test_centrality.py  test_chunking.py  test_graph.py  test_merge.py  test_observations.py  test_provenance.py  test_search.py  test_stats.py  test_subgraph.py  test_timeline.py  test_validation.py  traversal.test.ts
