[project]
name = "gk"
version = "0.1.0"
description = "Agentic Knowledge Graph MCP Server — hybrid search over a dynamic knowledge graph backed by SQLite"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "litellm>=1.60.0",
    "mcp[cli]>=1.20.0",
    "pydantic>=2.10.0",
    "sqlite-vec>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
gk = "src.server:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
